[tool.poetry]
name = "cue2m3u"
version = "0.1.0"
description = "Generate playlists for disc-based games."
authors = ["Andy Dirnberger <andy.dirnberger@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dirn/cue2m3u"

[tool.poetry.scripts]
generate = "cue2m3u:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
isort = "^5.9.2"
mypy = "^0.910"
pep8-naming = "^0.12.0"
pre-commit = "^2.13.0"
tox = "^3.24.0"

[tool.isort]
add_imports = "from __future__ import annotations"
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
