[tool.poetry]
name = "cue2m3u"
version = "0.1.0"
description = "Generate playlists for disc-based games."
authors = ["Andy Dirnberger <andy.dirnberger@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dirn/cue2m3u"

[tool.poetry.scripts]
generate = "cue2m3u:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.0"
flake8-bugbear = "^21.9.2"
isort = "^5.9.3"
mypy = "^0.910"
pep8-naming = "^0.12.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
tox = "^3.24.4"

[tool.isort]
add_imports = "from __future__ import annotations"
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
